force-app/main/default/objects/LiabilityType__c/LiabilityType__c.object-meta.xml
<CustomObject>
    <description>Used to store types of liabilities you can have. Depending on the liability type, fields become required on the related liability.</description>
    <label>Liability Type</label>
    <nameField>
        <label>Liability type name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Liability Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>