force-app/main/default/objects/LiabilityType__c/fields/DescriptionInternal__c.field-meta.xml
<CustomField>
    <fullName>DescriptionInternal__c</fullName>
    <description>Description of the liability type. This will be displayed to internal users when creating liabilities.</description>
    <label>Description (internal)</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>