force-app/main/default/objects/LiabilityType__c/fields/DeveloperName__c.field-meta.xml
<CustomField>
    <fullName>DeveloperName__c</fullName>
    <description>Unique name used to identify liability type records.</description>
    <label>Developer name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>