force-app/main/default/objects/LiabilityType__c/fields/HasABalance__c.field-meta.xml
<CustomField>
    <fullName>HasABalance__c</fullName>
    <description>To indicate whether a liability should always, sometimes or never have a Balance.</description>
    <label>Has a balance?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TypeFieldPossibilities</valueSetName>
    </valueSet>
</CustomField>