force-app/main/default/objects/LiabilityType__c/fields/HasAFixedRateThatWillExpire__c.field-meta.xml
<CustomField>
    <fullName>HasAFixedRateThatWillExpire__c</fullName>
    <description>To indicate whether a liability should always, sometimes or never have a Fixed Rate Expiry Date</description>
    <label>Has a fixed rate that&#39;ll expire?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TypeFieldPossibilities</valueSetName>
    </valueSet>
</CustomField>