force-app/main/default/objects/LiabilityType__c/fields/HasAnEndDate__c.field-meta.xml
<CustomField>
    <fullName>HasAnEndDate__c</fullName>
    <description>To indicate whether a liability should always, sometimes or never have an End Date</description>
    <label>Has an end date?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TypeFieldPossibilities</valueSetName>
    </valueSet>
</CustomField>