force-app/main/default/objects/LiabilityType__c/fields/HasAnInitialBalance__c.field-meta.xml
<CustomField>
    <fullName>HasAnInitialBalance__c</fullName>
    <description>To indicate whether a liability should always, sometimes or never have an Initial Balance</description>
    <label>Has an initial balance?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TypeFieldPossibilities</valueSetName>
    </valueSet>
</CustomField>