force-app/main/default/objects/LiabilityType__c/fields/HasAnInterestRate__c.field-meta.xml
<CustomField>
    <fullName>HasAnInterestRate__c</fullName>
    <description>To indicate whether a liability should always, sometimes or never have an Interest Rate</description>
    <label>Has an interest rate?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TypeFieldPossibilities</valueSetName>
    </valueSet>
</CustomField>