force-app/main/default/objects/LiabilityType__c/fields/HasARepaymentFrequency__c.field-meta.xml
<CustomField>
    <fullName>HasARepaymentFrequency__c</fullName>
    <description>To indicate whether a liability should always, sometimes or never have a Repayment Frequency</description>
    <label>Has a repayment frequency?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TypeFieldPossibilities</valueSetName>
    </valueSet>
</CustomField>