force-app/main/default/objects/LiabilityType__c/fields/HasPublicProvider__c.field-meta.xml
<CustomField>
    <fullName>HasPublicProvider__c</fullName>
    <description>To indicate when a liability either should always, sometimes or never have a public provider.</description>
    <label>Has Public Provider?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mandatory</fullName>
            </value>
            <value>
                <fullName>Ask if we need it</fullName>
            </value>
            <value>
                <fullName>Optional</fullName>
            </value>
            <value>
                <fullName>Never</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>