force-app/main/default/objects/LiabilityType__c/fields/HasRelatedAsset__c.field-meta.xml
<CustomField>
    <fullName>HasRelatedAsset__c</fullName>
    <description>To indicate when a liability either should always, sometimes or never be related to an asset</description>
    <label>Has related asset?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TypeFieldPossibilities</valueSetName>
    </valueSet>
</CustomField>