force-app/main/default/objects/LiabilityType__c/fields/SortOrder__c.field-meta.xml
<CustomField>
    <fullName>SortOrder__c</fullName>
    <description>Order the liability types should be displayed in the portal and internally</description>
    <inlineHelpText>Used to determine the order in which types should appear in tables/picklists etc.</inlineHelpText>
    <label>Sort order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>